lib/src/bindings/libsignal_bindings.dart


@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPrivateKey>,
    SignalConstPointerPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_record_get_private_key(
  ffi.Pointer<SignalMutPointerPrivateKey> out,
  SignalConstPointerPreKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPreKeyRecord>,
    ffi.Uint32,
    SignalConstPointerPublicKey,
    SignalConstPointerPrivateKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_record_new(
  ffi.Pointer<SignalMutPointerPreKeyRecord> out,
  int id,
  SignalConstPointerPublicKey pub_key,
  SignalConstPointerPrivateKey priv_key,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSenderKeyRecord>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_key_record_deserialize(
  ffi.Pointer<SignalMutPointerSenderKeyRecord> out,
  SignalBorrowedBuffer data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerSenderKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_key_record_serialize(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerSenderKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerServerCertificate>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_server_certificate_deserialize(
  ffi.Pointer<SignalMutPointerServerCertificate> out,
  SignalBorrowedBuffer data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerServerCertificate,
  )
>()
external ffi.Pointer<SignalFfiError> signal_server_certificate_get_serialized(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerServerCertificate obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerServerCertificate,
  )
>()
external ffi.Pointer<SignalFfiError> signal_server_certificate_get_certificate(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerServerCertificate obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerServerCertificate,
  )
>()
external ffi.Pointer<SignalFfiError> signal_server_certificate_get_signature(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerServerCertificate obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerServerCertificate,
  )
>()
external ffi.Pointer<SignalFfiError> signal_server_certificate_get_key_id(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerServerCertificate obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPublicKey>,
    SignalConstPointerServerCertificate,
  )
>()
external ffi.Pointer<SignalFfiError> signal_server_certificate_get_key(
  ffi.Pointer<SignalMutPointerPublicKey> out,
  SignalConstPointerServerCertificate obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerServerCertificate>,
    ffi.Uint32,
    SignalConstPointerPublicKey,
    SignalConstPointerPrivateKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_server_certificate_new(
  ffi.Pointer<SignalMutPointerServerCertificate> out,
  int key_id,
  SignalConstPointerPublicKey server_key,
  SignalConstPointerPrivateKey trust_root,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSenderCertificate>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_certificate_deserialize(
  ffi.Pointer<SignalMutPointerSenderCertificate> out,
  SignalBorrowedBuffer data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerSenderCertificate,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_certificate_get_serialized(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerSenderCertificate obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerSenderCertificate,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_certificate_get_certificate(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerSenderCertificate obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerSenderCertificate,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_certificate_get_signature(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerSenderCertificate obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    SignalConstPointerSenderCertificate,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_certificate_get_sender_uuid(
  ffi.Pointer<ffi.Pointer<ffi.Char>> out,
  SignalConstPointerSenderCertificate obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    SignalConstPointerSenderCertificate,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_certificate_get_sender_e164(
  ffi.Pointer<ffi.Pointer<ffi.Char>> out,
  SignalConstPointerSenderCertificate obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint64>,
    SignalConstPointerSenderCertificate,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_certificate_get_expiration(
  ffi.Pointer<ffi.Uint64> out,
  SignalConstPointerSenderCertificate obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerSenderCertificate,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_certificate_get_device_id(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerSenderCertificate obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPublicKey>,
    SignalConstPointerSenderCertificate,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_certificate_get_key(
  ffi.Pointer<SignalMutPointerPublicKey> out,
  SignalConstPointerSenderCertificate obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Bool>,
    SignalConstPointerSenderCertificate,
    SignalConstPointerPublicKey,
    ffi.Uint64,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_certificate_validate(
  ffi.Pointer<ffi.Bool> out,
  SignalConstPointerSenderCertificate cert,
  SignalConstPointerPublicKey key,
  int time,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerServerCertificate>,
    SignalConstPointerSenderCertificate,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_sender_certificate_get_server_certificate(
  ffi.Pointer<SignalMutPointerServerCertificate> out,
  SignalConstPointerSenderCertificate cert,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSenderCertificate>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Uint32,
    SignalConstPointerPublicKey,
    ffi.Uint64,
    SignalConstPointerServerCertificate,
    SignalConstPointerPrivateKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_certificate_new(
  ffi.Pointer<SignalMutPointerSenderCertificate> out,
  ffi.Pointer<ffi.Char> sender_uuid,
  ffi.Pointer<ffi.Char> sender_e164,
  int sender_device_id,
  SignalConstPointerPublicKey sender_key,
  int expiration,
  SignalConstPointerServerCertificate signer_cert,
  SignalConstPointerPrivateKey signer_key,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerUnidentifiedSenderMessageContent>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_unidentified_sender_message_content_deserialize(
  ffi.Pointer<SignalMutPointerUnidentifiedSenderMessageContent> out,
  SignalBorrowedBuffer data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerUnidentifiedSenderMessageContent,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_unidentified_sender_message_content_serialize(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerUnidentifiedSenderMessageContent obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerUnidentifiedSenderMessageContent,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_unidentified_sender_message_content_get_contents(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerUnidentifiedSenderMessageContent obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerUnidentifiedSenderMessageContent,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_unidentified_sender_message_content_get_group_id_or_empty(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerUnidentifiedSenderMessageContent m,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSenderCertificate>,
    SignalConstPointerUnidentifiedSenderMessageContent,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_unidentified_sender_message_content_get_sender_cert(
  ffi.Pointer<SignalMutPointerSenderCertificate> out,
  SignalConstPointerUnidentifiedSenderMessageContent m,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint8>,
    SignalConstPointerUnidentifiedSenderMessageContent,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_unidentified_sender_message_content_get_msg_type(
  ffi.Pointer<ffi.Uint8> out,
  SignalConstPointerUnidentifiedSenderMessageContent m,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerUnidentifiedSenderMessageContent,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_unidentified_sender_message_content_get_content_hint(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerUnidentifiedSenderMessageContent m,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerUnidentifiedSenderMessageContent>,
    SignalConstPointerCiphertextMessage,
    SignalConstPointerSenderCertificate,
    ffi.Uint32,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_unidentified_sender_message_content_new(
  ffi.Pointer<SignalMutPointerUnidentifiedSenderMessageContent> out,
  SignalConstPointerCiphertextMessage message,
  SignalConstPointerSenderCertificate sender,
  int content_hint,
  SignalBorrowedBuffer group_id,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint8>,
    SignalConstPointerCiphertextMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_ciphertext_message_type(
  ffi.Pointer<ffi.Uint8> out,
  SignalConstPointerCiphertextMessage msg,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerCiphertextMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_ciphertext_message_serialize(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerCiphertextMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerCiphertextMessage>,
    SignalConstPointerPlaintextContent,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_ciphertext_message_from_plaintext_content(
  ffi.Pointer<SignalMutPointerCiphertextMessage> out,
  SignalConstPointerPlaintextContent m,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerSessionRecord)
>()
external ffi.Pointer<SignalFfiError>
signal_session_record_archive_current_state(
  SignalMutPointerSessionRecord session_record,
);
